--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "next": "15.5.2",
+    "openai": "^5.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
