--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.17.0",
     "axios": "^1.11.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
