--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postinstall": "prisma generate --no-engine",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@google/genai": "^1.17.0",
+    "@prisma/client": "^6.16.1",
+    "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -17,6 +20,9 @@
     "openai": "^5.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,7 +34,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "prisma": "^6.16.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
