--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate --no-engine && next build",    
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate --no-engine",
-    "migrate:deploy": "npx prisma migrate deploy"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@google/genai": "^1.17.0",
