--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@prisma/client": "^6.16.1",
     "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "next": "15.5.2",
+    "next-auth": "^5.0.0-beta.29",
     "openai": "^5.19.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "^20",
