--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.890.0",
     "@google/genai": "^1.17.0",
     "@prisma/client": "^6.16.1",
     "@prisma/extension-accelerate": "^2.0.2",
