--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "openai": "^5.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-form-data": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
