--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "openai": "^5.19.1",
