--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.890.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@google/genai": "^1.17.0",
+    "@mui/material": "^7.3.2",
+    "@mui/x-charts": "^8.11.3",
     "@prisma/client": "^6.16.1",
     "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
