--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/genai": "^1.17.0",
     "@mui/material": "^7.3.2",
     "@mui/x-charts": "^8.11.3",
+    "@mui/x-charts-pro": "^8.11.3",
     "@prisma/client": "^6.16.1",
     "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
