--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "d3-cloud": "^1.2.7",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
@@ -31,6 +32,7 @@
     "openai": "^5.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-wordcloud": "^1.2.7",
     "zod": "^3.25.76",
     "zod-form-data": "^3.0.1"
   },
@@ -38,6 +40,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/d3-cloud": "^1.2.9",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "^20",
