--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-auth": "^5.0.0-beta.29",
     "openai": "^5.19.1",
     "react": "19.1.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "19.1.0",
     "zod": "^3.25.76",
     "zod-form-data": "^3.0.1"
