add word cloud chart

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,12 +21,12 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
-    "paths": {
-      "*": ["types/*", "*"]
-    },
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "target": "ES2017",
+     "baseUrl": ".",
+     "paths": {
+      "@/*": ["*"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types"],
+ "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types"],
   "exclude": ["node_modules"]
 }
