dodo test payment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "**/*.tsx",
     "next-env.d.ts",
     "types",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "declarations.d.ts"
   ],
   "exclude": [
     "node_modules"
