--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3-cloud": "^1.2.7",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "html2canvas": "^1.4.1",
     "multer": "^2.0.2",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
