--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.18.2",
     "framer-motion": "^12.23.22",
     "html2canvas": "^1.4.1",
+    "motion": "^12.23.22",
     "multer": "^2.0.2",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
